# weak-markdown

./: LICENSE  README.md  index.html  package.json
.github/workflows/: publish-releases.yml
.harness/: Build_weak_markdown_1688518169879-pr-trigger-input-set-1688518170748.yaml  Build_weak_markdown_1688518169879-push-trigger-input-set-1688518172120.yaml
.harness/pipelines/: weak-markdown-1688518150514.yaml
src/: App.tsx  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: template.desktop
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/: markdown-dark.css  markdown-light.css
