[package]
name = "weak-markdown"
version = "0.0.0"
description = "Weak Markdown Viewer"
authors = ["Seitbekir Seidametov"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "fs-all", "shell-all", "path-all", "global-shortcut-all", "window-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.19"
syslog = "6.1.0"
winit = "0.28.6"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
